# nlsh-rs

./: .gitignore  Cargo.toml  README.md  install.sh
src/: cli.rs  common.rs  config.rs  config_migration.rs  confirmation.rs  error.rs  interactive.rs  main.rs  prompt.rs  shell_integration.rs  slash_commands.rs  uninstall.rs  update_checker.rs
src/config/: migration.rs  mod.rs
src/providers/: base.rs  gemini.rs  mod.rs  ollama.rs  openai.rs
src/tests/: edit.rs  explain.rs  mod.rs  slash.rs
