[package]
name = "nlsh-rs"
version = "0.1.2"
edition = "2024"
license = "MIT"
description = "translate natural language to shell commands using AI"
homepage = "https://github.com/uwuclxdy/nlsh-rs"
repository = "https://github.com/uwuclxdy/nlsh-rs"
readme = "README.md"
keywords = ["cli", "ai", "shell", "terminal", "nlsh"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.49", features = ["full"] }
tokio-util = "0.7"
reqwest = { version = "0.13", features = ["json", "rustls", "rustls-native-certs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
dirs = "6.0"
colored = "3.1"
thiserror = "2.0"
anyhow = "1.0"
async-trait = "0.1"
dialoguer = "0.12"
libc = "0.2"
rustyline = "17.0"
log = "0.4"
