[package]
name = "nlsh-rs"
version = "0.3.0"
edition = "2024"
license = "MIT"
description = "Deprecated: nlsh-rs has been renamed to larpshell. Run this once to migrate your shell integration."
homepage = "https://github.com/uwuclxdy/larpshell"
repository = "https://github.com/uwuclxdy/larpshell"
readme = "README.md"
keywords = ["cli", "ai", "shell", "terminal", "larpshell"]
categories = ["command-line-utilities"]

[dependencies]
colored = "3.1.1"
dirs = "6.0.0"
